Bug 463259 - kwin_wayland generating lots of "precision lost! floating value sent to X" error messages in system journal that aren't actually errors
Summary: kwin_wayland generating lots of "precision lost! floating value sent to X" er...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.26.4
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-20 06:56 UTC by Jin Liu
Modified: 2023-01-05 23:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jin Liu 2022-12-20 06:56:59 UTC
SUMMARY
There are huge amount of kwin_wayland error messages in system journal, like "kwin_wayland[1025]: kwin_core: precision lost! floating value sent to X 72.5". This makes it difficult to see "real" error messages produced by other apps.

As kwin_wayland seems to work alright, I guess either this error message can be removed, or at least it can be INFO instead of ERROR.

STEPS TO REPRODUCE
1. Use wayland session.
2. Set global zoom to 250%.
3. journalctl -p3

OBSERVED RESULT
lots of "kwin_core: precision lost! floating value sent to X" error messages

EXPECTED RESULT
no such messages

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7
Comment 1 Bug Janitor Service 2023-01-05 21:03:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3398
Comment 2 Nate Graham 2023-01-05 23:44:53 UTC
Git commit 6a1552efb6249ff472990f784e7ef9bb16975fe4 by Nate Graham.
Committed on 05/01/2023 at 20:59.
Pushed by davidedmundson into branch 'master'.

utils/xcbutils: reduce severity of "precision lost" message a debug

Right now this is marked as critical, but it's not a critical error.
Make it a debug to avoid spamming logs with not-very-actionable
information.
FIXED-IN: 5.27

M  +1    -1    src/utils/xcbutils.cpp

https://invent.kde.org/plasma/kwin/commit/6a1552efb6249ff472990f784e7ef9bb16975fe4