src/utils/xcbutils.cpp
@@ -619,7 +619,7 @@ uint32_t toXNative(qreal value)
 {
     //debug helper, check for things getting mangled
     if (!qFuzzyIsNull(std::fmod(kwinApp()->xwaylandScale() * value, 1))) {
-        qCritical(KWIN_CORE) << "precision lost! floating value sent to X" << kwinApp()->xwaylandScale() * value;
+        qCDebug(KWIN_CORE) << "precision lost! floating value sent to X" << kwinApp()->xwaylandScale() * value;
     }
     return std::round(kwinApp()->xwaylandScale() * value);
 }
